--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use or https://modmuss50.me/fabric.html
-	minecraft_version=1.18
-	yarn_mappings=1.18+build.1
-	loader_version=0.11.6
+	minecraft_version=1.18.1
+	yarn_mappings=1.18.1+build.18
+	loader_version=0.12.12
 	# check available versions on maven for the given minecraft version you are using
-	carpet_core_version=1.4.56+v211130
+	carpet_core_version=1.18-1.4.56+v211130
 
 # Mod Properties
 	mod_version = 1.4.56
 	maven_group = carpet-autocraftingtable
 	archives_base_name = carpet-autocraftingtable
 
-# Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
-	# fabric_version=0.3.0+build.187
